--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -27,4 +27,5 @@ jobs:
         pypi-token: ${{ secrets.PYPI_API_TOKEN }}
         gh-token: ${{ secrets.GITHUB_TOKEN }}
         parse-changelog: false
+        pkg-name: tensorflow-datasets
         git-ref: ${{ github.event.inputs.git-ref }}
