--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Publish the package
       uses: etils-actions/pypi-auto-publish@v1
       with:
-        pypi-token: ${{ secrets.PYPI_API_TOKEN }}
+        pypi-token: ${{ secrets.PYPI_PASSWORD }}
         gh-token: ${{ secrets.GITHUB_TOKEN }}
         parse-changelog: false
         pkg-name: tensorflow-datasets
