Run tests for multiple Python versions.
PiperOrigin-RevId: 507730264

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -6,20 +6,27 @@ inputs:
     description: 'Tensorflow version'
     required: false
     default: 'skip'  # Use sentinel value to skip Tensorflow installation
+  python-version:
+    description: 'Python version'
+    required: false
+    default: '3.8'
+  extras:
+    description: 'Extra dependencies'
+    required: false
+    default: 'tests-all'
 
 runs:
   using: 'composite'
   steps:
     - name: Get current date
-      run: |
-        echo "today=$(date +'%Y-%m-%d')" >> $GITHUB_STATE
+      run: echo "today=$(date +'%Y-%m-%d')" >> $GITHUB_STATE
       shell: bash
 
     # Default pip caching doesn't work. See similar problem:
     # https://stackoverflow.com/questions/74119692/github-actions-setup-python-not-caching-pip-dependencies
     - uses: actions/setup-python@v4
       with:
-        python-version: 3.8
+        python-version: ${{ inputs.python-version }}
 
     # The cache is refreshed everyday to pull updated dependencies.
     - uses: actions/cache@v3
@@ -28,11 +35,18 @@ runs:
         key: ${{ env.pythonLocation }}-${{ hashFiles('setup.py') }}-${{ env.today }}-${{ inputs.tf-version }}
 
     # Install deps.
+    - name: Workaround for connectivity issues in Azure  # https://github.com/actions/virtual-environments/issues/675
+      run: |
+        sudo gem install apt-spy2
+        sudo apt-spy2 check
+        sudo apt-spy2 fix --commit
+        sudo apt-get update
+      shell: bash
     - run: sudo apt install -y protobuf-compiler  # for gcld3 tests
       shell: bash
     - uses: FedericoCarboni/setup-ffmpeg@v2  # for Audio FeatureConnector tests.
     - if: ${{ inputs.tf-version != 'skip' }}
       run: pip install ${{ inputs.tf-version }}
       shell: bash
-    - run: pip install -e .[tests-all]
+    - run: pip install -e .[${{ inputs.extras }}]
       shell: bash
