--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -17,8 +17,11 @@ concurrency:
   # Cancel only PR intermediate builds
   cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
 
+env:
+  PYTEST_NUM_SHARDS: 4  # Controls tests sharding enabled by `pytest-shard`
+
 jobs:
-  pytest-job:
+  shards-job:
     # For merged PR, activate testing only on the master branch, based on:
     # https://github.community/t/trigger-workflow-only-on-pull-request-merge/17359
     if: |
@@ -27,7 +30,31 @@ jobs:
         github.event.action != 'closed'
         && github.event.pull_request.merged == false)
 
-    name: 'Core TFDS tests on ${{ matrix.tf-version }}'
+    name: Generate shards
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Create variables
+        id: create-vars
+        run: |
+          echo "num-shards=$(jq -n -c '[${{ env.PYTEST_NUM_SHARDS }}]')" >> $GITHUB_OUTPUT
+          echo "shard-ids=$(jq -n -c '[range(1;${{ env.PYTEST_NUM_SHARDS }}+1)]')" >> $GITHUB_OUTPUT
+
+    outputs:
+      num-shards: ${{ steps.create-vars.outputs.num-shards }}
+      shard-ids: ${{ steps.create-vars.outputs.shard-ids }}
+
+  pytest-job:
+    # For merged PR, activate testing only on the master branch, based on:
+    # https://github.community/t/trigger-workflow-only-on-pull-request-merge/17359
+    if: |
+      github.ref == 'refs/heads/master'
+      || (
+        github.event.action != 'closed'
+        && github.event.pull_request.merged == false)
+    needs: shards-job
+
+    name: '[${{ matrix.tf-version }}][Python ${{ matrix.python-version }}][${{ matrix.shard-id }}/${{ matrix.num-shards }}] Core TFDS tests'
     runs-on: ubuntu-latest
     timeout-minutes: 30
     strategy:
@@ -35,13 +62,18 @@ jobs:
       fail-fast: false
       matrix:
         tf-version: ['tensorflow', 'tf-nightly']
-        shard-id: [0, 1, 2, 3]
+        # Can't reference env variables in matrix
+        num-shards: ${{ fromJson(needs.shards-job.outputs.num-shards) }}
+        shard-id: ${{ fromJson(needs.shards-job.outputs.shard-ids) }}
+        # TF suppported versions: https://www.tensorflow.org/install/pip#software_requirements
+        python-version: ['3.8', '3.9', '3.10']
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: ./.github/actions/setup
       with:
         tf-version: ${{ matrix.tf-version }}
+        python-version: ${{ matrix.python-version }}
 
     # Run tests
     # Ignores:
@@ -50,22 +82,49 @@ jobs:
     #   is linked to static libraries compiled again specific TF version, which
     #   makes test fails with linking error (libtensorflow_io_golang.so).
     # * imagenet2012_corrupted requires imagemagick binary.
-    # * test_utils.py, test_feature.py is not a test file.
     # * import_without_tf_test.py, because the test relies on TensorFlow not being imported.
     # * github_api is run separately to not overuse API quota.
     - name: Run core tests
-      run: |
-        pytest --durations=100 -vv -n auto --shard-id=${{ matrix.shard-id }} --num-shards=4 \
-          --ignore="tensorflow_datasets/datasets/nsynth/nsynth_dataset_builder_test.py" \
-          --ignore="tensorflow_datasets/core/features/features_test.py" \
-          --ignore="tensorflow_datasets/testing/test_utils.py" \
-          --ignore="tensorflow_datasets/image/lsun_test.py" \
-          --ignore="tensorflow_datasets/datasets/imagenet2012_corrupted/imagenet2012_corrupted_dataset_builder_test.py" \
-          --ignore="tensorflow_datasets/scripts/documentation/build_api_docs_test.py" \
-          --ignore="tensorflow_datasets/import_without_tf_test.py" \
-          --ignore="tensorflow_datasets/core/github_api/github_path_test.py"
+      uses: nick-fields/retry@v2
+      with:
+        timeout_minutes: 5
+        max_attempts: 2
+        retry_on: timeout
+        command: |
+          pytest --durations=100 -vv -n auto --shard-id=$((${{ matrix.shard-id }} - 1)) --num-shards=${{ env.PYTEST_NUM_SHARDS }} -o faulthandler_timeout=30 \
+            --ignore="tensorflow_datasets/datasets/nsynth/nsynth_dataset_builder_test.py" \
+            --ignore="tensorflow_datasets/image/lsun_test.py" \
+            --ignore="tensorflow_datasets/datasets/imagenet2012_corrupted/imagenet2012_corrupted_dataset_builder_test.py" \
+            --ignore="tensorflow_datasets/scripts/documentation/build_api_docs_test.py" \
+            --ignore="tensorflow_datasets/import_without_tf_test.py" \
+            --ignore="tensorflow_datasets/core/github_api/github_path_test.py"
 
-  githubapitest-job:
+  huggingface-pytest-job:
+    # For merged PR, activate testing only on the master branch.
+    if: |
+      github.ref == 'refs/heads/master'
+      || (
+        github.event.action != 'closed'
+        && github.event.pull_request.merged == false)
+
+    # HuggingFace tests need to be run separately because they're disabled without installed
+    # `datasets` library which is not included in ['tests-all'] extras for Python >=3.10
+    name: 'HuggingFace Python 3.10 tests'
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+
+    steps:
+    - uses: actions/checkout@v3
+    - uses: ./.github/actions/setup
+      with:
+        tf-version: tensorflow
+        python-version: '3.10'
+        extras: huggingface
+
+    - name: Run HuggingFace tests
+      run: pytest -vv -n auto tensorflow_datasets/core/dataset_builders/huggingface_dataset_builder_test.py
+
+  githubapi-pytest-job:
     # For merged PR, activate testing only on the master branch.
     if: |
       github.ref == 'refs/heads/master'
@@ -78,7 +137,7 @@ jobs:
     timeout-minutes: 30
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: ./.github/actions/setup
       with:
         tf-version: tensorflow
@@ -88,7 +147,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  notebooktest-job:
+  notebook-test-job:
     # For merged PR, activate testing only on the master branch.
     if: |
       github.ref == 'refs/heads/master'
@@ -101,7 +160,7 @@ jobs:
     timeout-minutes: 30
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: ./.github/actions/setup
       with:
         tf-version: tf-nightly
