--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -30,7 +30,7 @@ runs:
         sudo apt-get update
       shell: bash
     - run: | # Install protobuf-compiler for gcld3 library.
-        sudo apt install -y --allow-downgrades libprotobuf-lite23=3.12.4-1ubuntu7
+        sudo apt install -y --allow-downgrades libprotobuf-lite23=3.12.4-1ubuntu7 libprotobuf23=3.12.4-1ubuntu7 libprotoc23=3.12.4-1ubuntu7
         sudo apt install -y libprotobuf-dev=3.12.4-1ubuntu7 protobuf-compiler=3.12.4-1ubuntu7
       shell: bash
     - uses: FedericoCarboni/setup-ffmpeg@v2  # for Audio FeatureConnector tests.
