Restrict `tensorflow` version.
`tensorflow` 2.12.0 needs a new release of `tensorflow-io` 0.32.0: https://github.com/tensorflow/io/issues/1789

PiperOrigin-RevId: 519965653

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -174,7 +174,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: ./.github/actions/setup
       with:
-        tf-version: tf-nightly
+        tf-version: tensorflow
 
     - run: pip install ipython
 
