Run CI unittests on pull requests to master branch

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -2,6 +2,9 @@ name: Unittests
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - "master"
   push:
     # Do not trigger tests for documentation or markdown docs.
     paths-ignore:
