Removed quotes in branch name in CI

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   pull_request:
     branches:
-      - "master"
+      - master
   push:
     # Do not trigger tests for documentation or markdown docs.
     paths-ignore:
