--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -85,7 +85,7 @@ jobs:
         shard-id: ${{ fromJson(needs.shards-job.outputs.shard-ids) }}
         # TF suppported versions: https://www.tensorflow.org/install/pip#software_requirements
         python-version: ['3.8', '3.9', '3.10']
-        os-version: [ubuntu-latest]
+        os-version: [ubuntu-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v3
