Drop support for Python 3.8 as per https://numpy.org/neps/nep-0029-deprecation_policy.html
PiperOrigin-RevId: 555083278

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -84,7 +84,7 @@ jobs:
         num-shards: ${{ fromJson(needs.shards-job.outputs.num-shards) }}
         shard-id: ${{ fromJson(needs.shards-job.outputs.shard-ids) }}
         # TF suppported versions: https://www.tensorflow.org/install/pip#software_requirements
-        python-version: ['3.8', '3.9', '3.10']
+        python-version: ['3.9', '3.10']
         os-version: [ubuntu-latest, macos-latest]
 
     steps:
