--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -36,7 +36,7 @@ runs:
         sudo apt install -y --allow-downgrades libprotobuf-lite23=3.12.4-1ubuntu7 libprotobuf23=3.12.4-1ubuntu7 libprotoc23=3.12.4-1ubuntu7
         sudo apt install -y libprotobuf-dev=3.12.4-1ubuntu7 protobuf-compiler=3.12.4-1ubuntu7
       shell: bash
-    - if: ${{ runner.os == 'macOS' && inputs.python-version != '3.8' }}
+    - if: ${{ runner.os == 'macOS' }}
       # protobuf version must be compatible with C++11 (used by gcld3)
       run: |
         brew install protobuf@21
@@ -72,8 +72,12 @@ runs:
     # Get mlcroissant from git latest version. Installing from pip does not allow us to get the
     # latest mlcroissant features. Note that we can test using mlcroissant only for python version
     # >= 3.10.
-    - if: ${{ inputs.python-version != '3.9'}}
-      run: |
-        sudo apt-get install -y libgraphviz-dev
-        pip install mlcroissant@git+https://github.com/mlcommons/croissant#subdirectory=python/mlcroissant
+    - if: ${{ runner.os == 'Linux' && inputs.python-version != '3.9' }}
+      run: sudo apt-get install -y libgraphviz-dev
+      shell: bash
+    - if: ${{ runner.os == 'macOS' && inputs.python-version != '3.9' }}
+      run: brew install graphviz
+      shell: bash
+    - if: ${{ inputs.python-version != '3.9' }}
+      run: pip install mlcroissant@git+https://github.com/mlcommons/croissant#subdirectory=python/mlcroissant
       shell: bash
