--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -9,7 +9,7 @@ inputs:
   python-version:
     description: 'Python version'
     required: false
-    default: '3.9'
+    default: '3.10'
   extras:
     description: 'Extra dependencies'
     required: false
@@ -69,15 +69,12 @@ runs:
     # Get TFDS library from the repository instead of cache.
     - run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
       shell: bash
-    # Get mlcroissant from git latest version. Installing from pip does not allow us to get the
-    # latest mlcroissant features. Note that we can test using mlcroissant only for python version
-    # >= 3.10.
-    - if: ${{ runner.os == 'Linux' && inputs.python-version != '3.9' }}
+    # Get mlcroissant from the repository to get the latest features.
+    - if: ${{ runner.os == 'Linux' }}
       run: sudo apt-get install -y libgraphviz-dev
       shell: bash
-    - if: ${{ runner.os == 'macOS' && inputs.python-version != '3.9' }}
+    - if: ${{ runner.os == 'macOS' }}
       run: brew install graphviz
       shell: bash
-    - if: ${{ inputs.python-version != '3.9' }}
-      run: pip install mlcroissant@git+https://github.com/mlcommons/croissant#subdirectory=python/mlcroissant
+    - run: pip install mlcroissant@git+https://github.com/mlcommons/croissant#subdirectory=python/mlcroissant
       shell: bash
