--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Setup Python.
       uses: actions/setup-python@v2
       with:
-        python-version: 3.10
+        python-version: '3.10'
 
     - name: Install deps.
       run: pip install setuptools wheel twine
